Finished rough work on pokemon dataset - 95% accuracy with neural network

--- a/partynyc/nyc.ipynb
+++ b/partynyc/nyc.ipynb
@@ -900,7 +900,9 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# turn data into consequtive frames, hour by hour (or day by day)\n",
@@ -943,7 +945,9 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def getFrame(data,date):\n",
@@ -953,7 +957,9 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "datelist = prep_time(rawdata)"
@@ -978,7 +984,7 @@
    },
    "outputs": [],
    "source": [
-    "frame_list = mypool.map(lambda x: (getFrame(rawdata,x)),datelist)"
+    "#frame_list = mypool.map(lambda x: (getFrame(rawdata,x)),datelist)"
    ]
   },
   {
@@ -1025,10 +1031,12 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "temporary = framer(rawdata,[datelist[0]])"
+    "#temporary = framer(rawdata,[datelist[0]])"
    ]
   },
   {
@@ -1073,7 +1081,7 @@
     }
    ],
    "source": [
-    "frame_data = framer(rawdata,datelist)"
+    "#frame_data = framer(rawdata,datelist)"
    ]
   },
   {
