--- a/digit-recogniser/Untitled.ipynb
+++ b/digit-recogniser/Untitled.ipynb
@@ -2295,13 +2295,7 @@
       "29399/29399 [==============================] - 1s 34us/step - loss: nan - acc: 0.0987\n",
       "Epoch 82/200\n",
       "29399/29399 [==============================] - 1s 34us/step - loss: nan - acc: 0.0987\n",
-      "Epoch 83/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 83/200\n",
       "29399/29399 [==============================] - 1s 31us/step - loss: nan - acc: 0.0987\n",
       "Epoch 84/200\n",
       "29399/29399 [==============================] - 1s 29us/step - loss: nan - acc: 0.0987\n",
